force-app/main/default/objects/Encuestas_CX__c/fields/Nivel_de_satisfacci_n_con_la_atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_satisfacci_n_con_la_atenci_n__c</fullName>
    <description>¿Cuál es su nivel de satisfacción con la atención recibida durante la gestión de su reclamo?</description>
    <inlineHelpText>¿Cuál es su nivel de satisfacción con la atención recibida durante la gestión de su reclamo?</inlineHelpText>
    <label>Nivel de satisfacción con la atención</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>