force-app/main/default/objects/Encuestas_CX__c/fields/Nivel_de_Satisfaccion_con_Capacitacion__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Satisfaccion_con_Capacitacion__c</fullName>
    <inlineHelpText>¿Cuál es su nivel de satisfacción general con la capacitación recibida sobre el uso de la bomba de alimentación enteral?</inlineHelpText>
    <label>Nivel de Satisfacción con Capacitacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>