force-app/main/default/objects/Encuestas_CX__c/fields/Nivel_satisfacci_n_tiempo_de_respuesta__c.field-meta.xml
<CustomField>
    <fullName>Nivel_satisfacci_n_tiempo_de_respuesta__c</fullName>
    <description>¿Cuál es su nivel de satisfacción con el tiempo en que recibió la respuesta?</description>
    <inlineHelpText>¿Cuál es su nivel de satisfacción con el tiempo en que recibió la respuesta?</inlineHelpText>
    <label>Nivel satisfacción tiempo de respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>