force-app/main/default/objects/Encuestas_CX__c/fields/Nro_de_Encuestas_CX__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Encuestas_CX__c</fullName>
    <displayFormat>CX-{000000}</displayFormat>
    <label>Nro de Encuestas CX</label>
    <type>AutoNumber</type>
</CustomField>