force-app/main/default/objects/Encuestas_CX__c/fields/Observaci_n_CSAT_General__c.field-meta.xml
<CustomField>
    <fullName>Observaci_n_CSAT_General__c</fullName>
    <inlineHelpText>¿Por qué?</inlineHelpText>
    <label>Observación CSAT General</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comunicación</fullName>
            </value>
            <value>
                <fullName>Cumplimiento</fullName>
            </value>
            <value>
                <fullName>Compromiso</fullName>
            </value>
            <value>
                <fullName>Aviso de gestión de envío</fullName>
            </value>
            <value>
                <fullName>Muy buen servicio</fullName>
            </value>
            <value>
                <fullName>Calidad de atención</fullName>
            </value>
            <value>
                <fullName>Problemas con envíos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>