force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_Aspectos_a_mejorar__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Aspectos_a_mejorar__c</fullName>
    <label>Observaciones Aspectos a mejorar</label>
    <type>TextArea</type>
</CustomField>