force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_CSAT_Env_os__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_CSAT_Env_os__c</fullName>
    <inlineHelpText>¿Por qué?</inlineHelpText>
    <label>Observaciones CSAT Envíos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En tiempo y forma</fullName>
            </value>
            <value>
                <fullName>Existieron problemas, pero se resolvieron</fullName>
            </value>
            <value>
                <fullName>Sin inconvenientes</fullName>
            </value>
            <value>
                <fullName>Plazos/Rango podría reducirse</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>