force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_CSTA_HCPS__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_CSTA_HCPS__c</fullName>
    <inlineHelpText>¿Por qué?</inlineHelpText>
    <label>Observaciones CSAT HCPS</label>
    <type>TextArea</type>
</CustomField>