force-app/main/default/objects/Encuestas_CX__c/fields/OBSERVACIONES_ENV_OS__c.field-meta.xml
<CustomField>
    <fullName>OBSERVACIONES_ENV_OS__c</fullName>
    <description>Observaciones sobre la puntuación de satisfacción de envíos</description>
    <inlineHelpText>PREGUNTA: ¿Porque ha asignado dicho puntaje?</inlineHelpText>
    <label>OBSERVACIONES ENVÍOS</label>
    <type>TextArea</type>
</CustomField>