force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_Envios__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Envios__c</fullName>
    <description>Observacionnes sobre la puntuacion de satisfaccion de envio</description>
    <inlineHelpText>PREGUNTA: ¿Porque eligio ese puntaje? ¿Nos quiere dar mas detalles?</inlineHelpText>
    <label>Observaciones Envios</label>
    <type>TextArea</type>
</CustomField>