force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_Info_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Info_Adicional__c</fullName>
    <inlineHelpText>¿Cuál?</inlineHelpText>
    <label>Observaciones Info Adicional</label>
    <type>TextArea</type>
</CustomField>