force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_Profesionales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Profesionales__c</fullName>
    <description>Breve detalle del servicio brindado en vista a la selección de puntos por el paciente</description>
    <inlineHelpText>En función del valor seleccionado, por favor, brinde un detalle de la atención recibida por nuestros profesionales</inlineHelpText>
    <label>Observaciones Profesionales</label>
    <type>TextArea</type>
</CustomField>