force-app/main/default/objects/Encuestas_CX__c/fields/Observaciones_Valoraci_n_del_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Valoraci_n_del_Servicio__c</fullName>
    <label>Observaciones Valoración del Servicio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confianza</fullName>
            </value>
            <value>
                <fullName>Practicidad de envío a domicilio</fullName>
            </value>
            <value>
                <fullName>Garantía de Stock</fullName>
            </value>
            <value>
                <fullName>Cumplimiento</fullName>
            </value>
            <value>
                <fullName>Prefiere retirar por farmacia</fullName>
            </value>
            <value>
                <fullName>Recibir sin intermediarios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>