force-app/main/default/objects/Encuestas_CX__c/fields/Opciones_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Opciones_Entrega__c</fullName>
    <inlineHelpText>¿Cuál de estas opciones valora más?</inlineHelpText>
    <label>Opciones Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Entrega en domicilio</fullName>
            </value>
            <value>
                <fullName>Entrega por pick up</fullName>
            </value>
            <value>
                <fullName>Elegir el día y franja horaria dentro de las opciones disponibles</fullName>
                <isActive>false</isActive>
                <label>Elegir el día y franja horaria dentro de las opciones disponibles</label>
            </value>
            <value>
                <fullName>Es indistinto</fullName>
                <isActive>false</isActive>
                <label>Es indistinto</label>
            </value>
            <value>
                <fullName>Que el envío llegue dentro de los plazos estimados de entrega</fullName>
                <isActive>false</isActive>
                <label>Que el envío llegue dentro de los plazos estimados de entrega</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>