force-app/main/default/objects/Encuestas_CX__c/fields/Opinion_Capacitacion_Uso_Bomba_Enteral__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Capacitacion_Uso_Bomba_Enteral__c</fullName>
    <inlineHelpText>Respecto a la capacitación recibida sobre el uso de Bomba de alimentación Enteral, usted considera:</inlineHelpText>
    <label>Opinión Capacitación Uso Bomba Enteral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La capacitación fue suficiente para comprender su uso.</fullName>
            </value>
            <value>
                <fullName>Considero necesario una nueva capacitación para afianzar conocimientos.</fullName>
            </value>
            <value>
                <fullName>Considero que NO logró transmitir los conceptos mínimos como para poder usarla.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>