force-app/main/default/objects/Encuestas_CX__c/fields/Otras_Observaciones_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Otras_Observaciones_CSAT__c</fullName>
    <label>Otras Observaciones CSAT</label>
    <type>TextArea</type>
</CustomField>