force-app/main/default/objects/Encuestas_CX__c/fields/Otras_Observaciones_CSAT_Env_os__c.field-meta.xml
<CustomField>
    <fullName>Otras_Observaciones_CSAT_Env_os__c</fullName>
    <label>Otras Observaciones CSAT Envíos</label>
    <type>TextArea</type>
</CustomField>