force-app/main/default/objects/Encuestas_CX__c/fields/Otras_Observaciones_de_Valoraci_n__c.field-meta.xml
<CustomField>
    <fullName>Otras_Observaciones_de_Valoraci_n__c</fullName>
    <label>Otras Observaciones de Valoración</label>
    <type>TextArea</type>
</CustomField>