force-app/main/default/objects/Encuestas_CX__c/fields/Para_comunicarse_Qu_medio_utiliza__c.field-meta.xml
<CustomField>
    <fullName>Para_comunicarse_Qu_medio_utiliza__c</fullName>
    <description>Si usted tiene que comunicarse con nosotros, ¿De que manera lo hace?</description>
    <inlineHelpText>Si usted tiene que comunicarse con nosotros, ¿De que manera lo hace?</inlineHelpText>
    <label>Para comunicarse ¿Qué medio utiliza?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>WA Best Care</fullName>
            </value>
            <value>
                <fullName>WA Representante</fullName>
            </value>
            <value>
                <fullName>Obra Social</fullName>
            </value>
            <value>
                <fullName>No sé como hacerlo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>