force-app/main/default/objects/Encuestas_CX__c/fields/Por_qu_motivo__c.field-meta.xml
<CustomField>
    <fullName>Por_qu_motivo__c</fullName>
    <label>¿Por qué motivo?</label>
    <type>TextArea</type>
</CustomField>