force-app/main/default/objects/Encuestas_CX__c/fields/Procedimiento_Renovaci_n__c.field-meta.xml
<CustomField>
    <fullName>Procedimiento_Renovaci_n__c</fullName>
    <inlineHelpText>¿Conocen el procedimiento para renovar la provisión del servicio?</inlineHelpText>
    <label>Procedimiento Renovación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lo conocen</fullName>
            </value>
            <value>
                <fullName>No lo conocen</fullName>
            </value>
            <value>
                <fullName>Lo conocen parcialmente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>