force-app/main/default/objects/Encuestas_CX__c/fields/promedio__c.field-meta.xml
<CustomField>
    <fullName>promedio__c</fullName>
    <formula>VALUE(TEXT(Calidad_de_atenci_n__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>