force-app/main/default/objects/Encuestas_CX__c/fields/Promedio_Satisfacci_n__c.field-meta.xml
<CustomField>
    <fullName>Promedio_Satisfacci_n__c</fullName>
    <formula>(VALUE(text(Calidad_de_atenci_n__c))+VALUE(text( Satisfacci_n_Profesionales__c))+VALUE(text( Satisfacci_n_Env_os__c)))/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio Satisfacción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>