force-app/main/default/objects/Encuestas_CX__c/fields/Qu_motivo_esa_decisi_n__c.field-meta.xml
<CustomField>
    <fullName>Qu_motivo_esa_decisi_n__c</fullName>
    <description>¿Cuáles son las razones que motivan esa decisión?</description>
    <inlineHelpText>¿Cuáles son las razones que motivan esa decisión?</inlineHelpText>
    <label>¿Qué motivo esa decisión?</label>
    <type>TextArea</type>
</CustomField>