force-app/main/default/objects/Encuestas_CX__c/fields/Qu_tan_probable_es_que_recomiende__c.field-meta.xml
<CustomField>
    <fullName>Qu_tan_probable_es_que_recomiende__c</fullName>
    <description>Del 1 al 10, y en función de toda su experiencia, ¿Qué tan probable es que nos recomiende a un amigo/familiar?</description>
    <inlineHelpText>Del 1 al 10, y en función de toda su experiencia, ¿Qué tan probable es que nos recomiende a un amigo/familiar?</inlineHelpText>
    <label>¿Qué tan probable es que recomiende?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>