force-app/main/default/objects/Encuestas_CX__c/fields/Queres_dejar_alg_n_otro_comentario_p__c.field-meta.xml
<CustomField>
    <fullName>Queres_dejar_alg_n_otro_comentario_p__c</fullName>
    <inlineHelpText>¿Querés dejar algún otro comentario para mejorar nuestro servicio?</inlineHelpText>
    <label>¿Algún comentario para mejorar servicio?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>