force-app/main/default/objects/Encuestas_CX__c/fields/Qui_n_responde__c.field-meta.xml
<CustomField>
    <fullName>Qui_n_responde__c</fullName>
    <inlineHelpText>Responde encuesta:</inlineHelpText>
    <label>¿Quién responde?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mamá</fullName>
            </value>
            <value>
                <fullName>Hijo/a</fullName>
            </value>
            <value>
                <fullName>Papá</fullName>
            </value>
            <value>
                <fullName>Personal de Institución</fullName>
            </value>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>Otro familiar</fullName>
            </value>
            <value>
                <fullName>Paciente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>