force-app/main/default/objects/Encuestas_CX__c/fields/Quiere_recibir_info_canales_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Quiere_recibir_info_canales_de_ventas__c</fullName>
    <description>¿Manifiesta interés en recibir información de nuestros canales de venta oficial?</description>
    <inlineHelpText>¿Manifiesta interés en recibir información de nuestros canales de venta oficial?</inlineHelpText>
    <label>¿Quiere recibir info canales de ventas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>