force-app/main/default/objects/Encuestas_CX__c/fields/Raz_n_que_motiv_a_su_calificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Raz_n_que_motiv_a_su_calificaci_n__c</fullName>
    <inlineHelpText>¿Podrías indicar la razón que motivó tu calificación?</inlineHelpText>
    <label>Razón que motivó a su calificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La respuesta de su consulta o reclamo</fullName>
            </value>
            <value>
                <fullName>Trato del representante</fullName>
            </value>
            <value>
                <fullName>Tiempo transcurrido para ser atendido por un representante</fullName>
            </value>
            <value>
                <fullName>Facilidad para comunicarse</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>