force-app/main/default/objects/Encuestas_CX__c/fields/Razones_que_motivaron_esa_decisi_n__c.field-meta.xml
<CustomField>
    <fullName>Razones_que_motivaron_esa_decisi_n__c</fullName>
    <description>Razones por las cuales el bebé / niño no continúa consumiendo productos de la compañía después del reclamo</description>
    <inlineHelpText>Responder solamente en caso de que el bebé / niño no continúe consumiendo productos de la compañía después del reclamo</inlineHelpText>
    <label>Razones que motivaron esa decisión?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>