force-app/main/default/objects/Encuestas_CX__c/fields/Receptividad_del_Equipo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Receptividad_del_Equipo_de_Servicio__c</fullName>
    <inlineHelpText>¿Qué tan receptivo ha sido nuestro equipo de servicio a tus preguntas y preocupaciones?</inlineHelpText>
    <label>Receptividad del Equipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nada receptivos</fullName>
            </value>
            <value>
                <fullName>Poco receptivos</fullName>
            </value>
            <value>
                <fullName>Moderadamente receptivos</fullName>
            </value>
            <value>
                <fullName>Muy receptivos</fullName>
            </value>
            <value>
                <fullName>Extremadamente receptivos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>