force-app/main/default/objects/Encuestas_CX__c/fields/Recomendar_a_servicio_a_amigo_familiar__c.field-meta.xml
<CustomField>
    <fullName>Recomendar_a_servicio_a_amigo_familiar__c</fullName>
    <inlineHelpText>De acuerdo a su experiencia, ¿Recomendaría nuestro servicio a un amigo o familiar?</inlineHelpText>
    <label>Recomendaría servicio a amigo/familiar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>