force-app/main/default/objects/Encuestas_CX__c/fields/Satisfacci_n_con_Operador_Log_stico__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_con_Operador_Log_stico__c</fullName>
    <inlineHelpText>Por favor, indique el grado de satisfacción que tiene el cliente con el operador logístico</inlineHelpText>
    <label>Satisfacción con Operador Logístico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>