force-app/main/default/objects/Encuestas_CX__c/fields/Satisfacci_n_Env_os__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_Env_os__c</fullName>
    <inlineHelpText>PREGUNTA: ¿QUE TAN SATISFECHO SE ENCUENTRA CON LAS ENTREGAS QUE REALIZA BEC EN SU DOMICILIO?</inlineHelpText>
    <label>Satisfacción Envíos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>