force-app/main/default/objects/Encuestas_CX__c/fields/Satisfacci_n_Envios__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_Envios__c</fullName>
    <description>Este campo mide el grado de satisfaccion con los envios realizados al paciente</description>
    <inlineHelpText>PREGUNTA: ¿Que tan satisfecho se encuentra con las entregas que realiza Best Care en su domicilio? Si nos tuviera que calificar que puntuacion nos pondría.</inlineHelpText>
    <label>Satisfacción Envios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>