force-app/main/default/objects/Encuestas_CX__c/fields/Satisfacci_n_General__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_General__c</fullName>
    <inlineHelpText>Considerando toda su experiencia con Best Care ¿Que tan probable es que recomiende nuestro servicio a un familiar u amigo?</inlineHelpText>
    <label>Satisfacción General</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>